-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 15
-
Component/s: hotspot
-
b22
-
x86_64
-
os_x
-
Not verified
The following test failed in the JDK15 CI:
compiler/codecache/stress/UnexpectedDeoptimizationTest.java
Here's a snippet from the log file:
----------System.out:(23/1628)----------
CompileCommand: dontinline compiler/codecache/stress/Helper$TestCase.method
For random generator using seed: -2972034434498239165
To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-2972034434498239165" to command line.
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/subtypenode.cpp:137
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/a6efd25a-e066-4559-9516-837618a35e9e-S434/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0ee9e9f8-f89a-41de-bc5b-ff370521286d/runs/9af24eba-c166-4ec8-bb5d-fc3eea491f7e/workspace/open/src/hotspot/share/opto/subtypenode.cpp:137), pid=26072, tid=25091
# assert(phase->type(obj)->isa_oopptr()) failed: only for oop input
#
# JRE version: Java(TM) SE Runtime Environment (15.0+19) (fastdebug build 15-ea+19-786)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+19-786, mixed mode, tiered, z gc, bsd-amd64)
# Core dump will be written. Default location: core.26072
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /scratch/mesos/slaves/a6efd25a-e066-4559-9516-837618a35e9e-S414/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a87df5a9-e1c4-4000-a1a5-914fb14261ad/runs/bea6b660-15b8-46c9-b677-500b57d11b57/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/scratch/0/hs_err_pid26072.log
[thread 36355 also had an error]
------ Timeout during error reporting after 120 s. ------
# [ timer expired, abort... ]
----------System.err:(0/0)----------
compiler/codecache/stress/UnexpectedDeoptimizationTest.java
Here's a snippet from the log file:
----------System.out:(23/1628)----------
CompileCommand: dontinline compiler/codecache/stress/Helper$TestCase.method
For random generator using seed: -2972034434498239165
To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-2972034434498239165" to command line.
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/subtypenode.cpp:137
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/a6efd25a-e066-4559-9516-837618a35e9e-S434/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0ee9e9f8-f89a-41de-bc5b-ff370521286d/runs/9af24eba-c166-4ec8-bb5d-fc3eea491f7e/workspace/open/src/hotspot/share/opto/subtypenode.cpp:137), pid=26072, tid=25091
# assert(phase->type(obj)->isa_oopptr()) failed: only for oop input
#
# JRE version: Java(TM) SE Runtime Environment (15.0+19) (fastdebug build 15-ea+19-786)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+19-786, mixed mode, tiered, z gc, bsd-amd64)
# Core dump will be written. Default location: core.26072
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /scratch/mesos/slaves/a6efd25a-e066-4559-9516-837618a35e9e-S414/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a87df5a9-e1c4-4000-a1a5-914fb14261ad/runs/bea6b660-15b8-46c9-b677-500b57d11b57/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/scratch/0/hs_err_pid26072.log
[thread 36355 also had an error]
------ Timeout during error reporting after 120 s. ------
# [ timer expired, abort... ]
----------System.err:(0/0)----------
- relates to
-
JDK-8241041 C2: "assert((Value(phase) == t) || (t != TypeInt::CC_GT && t != TypeInt::CC_EQ)) failed: missing Value() optimization" still happens after fix for 8239335
-
- Closed
-